--- a/Hardware/ReadMe
+++ b/Hardware/ReadMe
@@ -1,1 +1,9 @@
+Components used include:
 
+1. Arduino Uno
+2. Voltage Regulator - IC1 7850T
+3. Pushbutton - Adafruit
+4. Resistors - R1, R2 -0402-01/16W-1%, SparkFun (100k)
+5. Battery - G1, AB9V
+6. LED - LED2, 5MM, Adafruit
+7. Capacitor - 0.1 uF, 0402-16V-10%, 0.1in
